import grpc
from concurrent import futures
import asyncio

class AudioServiceImpl:
    """gRPC Audio Service Implementation"""
    
    def __init__(self, audio_processor):
        self.audio_processor = audio_processor
    
    async def ProcessAudio(self, request, context):
        """Process audio and return transcription with emotions"""
        try:
            # Mock audio processing
            result = {
                "processed_audio": b"processed_data",
                "transcription": "مرحبا كيف حالك؟",
                "emotions": ["happy", "excited"],
                "confidence": 0.85
            }
            
            # Return response (would use generated pb2 classes)
            return {
                "processed_audio": result["processed_audio"],
                "transcription": result["transcription"],
                "detected_emotions": result["emotions"],
                "confidence": result["confidence"]
            }
            
        except Exception as e:
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"Audio processing failed: {str(e)}")
            return {}
    
    async def StreamAudio(self, request_iterator, context):
        """Stream audio processing"""
        try:
            async for chunk in request_iterator:
                # Process audio chunk
                processed_chunk = await self._process_chunk(chunk)
                
                yield {
                    "data": processed_chunk,
                    "sequence": chunk.get("sequence", 0),
                    "is_final": chunk.get("is_final", False)
                }
                
        except Exception as e:
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"Streaming failed: {str(e)}")
    
    async def _process_chunk(self, chunk):
        """Process individual audio chunk"""
        # Mock processing
        return b"processed_chunk_data"

async def serve_audio_service(port: int = 50051):
    """Start gRPC Audio Service"""
    server = grpc.aio.server(futures.ThreadPoolExecutor(max_workers=10))
    
    # Add service
    audio_processor = None  # Initialize your audio processor
    service_impl = AudioServiceImpl(audio_processor)
    
    # Start server
    listen_addr = f'[::]:{port}'
    server.add_insecure_port(listen_addr)
    
    await server.start()
    print(f"Audio Service started on {listen_addr}")
    
    try:
        await server.wait_for_termination()
    except KeyboardInterrupt:
        await server.stop(0)